Support implementation_readme. Document progress.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -66,8 +66,9 @@
     "import json\n",
     "import re\n",
     "\n",
-    "from copy import deepcopy\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "from shutil import copy2\n",
+    "from copy import deepcopy"
    ]
   },
   {
@@ -312,6 +313,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default `system_desc_id.json` (to catch uninitialized descriptions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_system_json = {\n",
+    "    \"division\": \"reqired\",\n",
+    "    \"submitter\": \"required\",\n",
+    "    \"status\": \"required\",\n",
+    "    \"system_name\": \"required\",\n",
+    "\n",
+    "    \"number_of_nodes\": \"required\",\n",
+    "    \"host_processor_model_name\": \"required\",\n",
+    "    \"host_processors_per_node\": \"required\",\n",
+    "    \"host_processor_core_count\": \"required\",\n",
+    "    \"host_processor_frequency\": \"\",\n",
+    "    \"host_processor_caches\": \"\",\n",
+    "    \"host_memory_configuration\": \"\",\n",
+    "    \"host_memory_capacity\": \"required\",\n",
+    "    \"host_storage_capacity\": \"required\",\n",
+    "    \"host_storage_type\": \"required\",\n",
+    "    \"host_processor_interconnect\": \"\",\n",
+    "    \"host_networking\": \"\",\n",
+    "    \"host_networking_topology\": \"\",\n",
+    "\n",
+    "    \"accelerators_per_node\": \"required\",\n",
+    "    \"accelerator_model_name\": \"required\",\n",
+    "    \"accelerator_frequency\": \"\",\n",
+    "    \"accelerator_host_interconnect\": \"\",\n",
+    "    \"accelerator_interconnect\": \"\",\n",
+    "    \"accelerator_interconnect_topology\": \"\",\n",
+    "    \"accelerator_memory_capacity\": \"required\",\n",
+    "    \"accelerator_memory_configuration\": \"\",\n",
+    "    \"accelerator_on-chip_memories\": \"\",\n",
+    "    \"cooling\": \"\",\n",
+    "    \"hw_notes\": \"\",\n",
+    "\n",
+    "    \"framework\": \"required\",\n",
+    "    \"operating_system\": \"required\",\n",
+    "    \"other_software_stack\": \"required\",\n",
+    "    \"sw_notes\": \"\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"implementations\"></a>\n",
+    "## Implementations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -378,10 +439,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "implementation_readmes = {}\n",
+    "implementation_readmes['image-classification-tflite'] = \\\n",
+    "\"\"\"# MLPerf Inference - Image Clasification - TFLite\n",
+    "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-tflite-loadgen).\n",
+    "- [Instructions](https://github.com/mlperf/inference/blob/master/v0.5/classification_and_detection/optional_harness_ck/classification/tflite/README.md).\n",
+    "\"\"\"\n",
+    "\n",
+    "implementation_readmes['image-classification-armnn-tflite'] = \\\n",
+    "\"\"\"# MLPerf Inference - Image Clasification - ArmNN-TFLite\n",
+    "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-armnn-tflite-loadgen).\n",
+    "- [Instructions](https://github.com/ARM-software/armnn-mlperf/blob/master/README.md).\n",
+    "\"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defaults (to catch uninitialized descriptions)"
+    "### Default `system_desc_id_imp.json` (to catch uninitialized descriptions)"
    ]
   },
   {
@@ -390,46 +471,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# system_desc_id.json\n",
-    "default_system_json = {\n",
-    "    \"division\": \"reqired\",\n",
-    "    \"submitter\": \"required\",\n",
-    "    \"status\": \"required\",\n",
-    "    \"system_name\": \"required\",\n",
-    "\n",
-    "    \"number_of_nodes\": \"required\",\n",
-    "    \"host_processor_model_name\": \"required\",\n",
-    "    \"host_processors_per_node\": \"required\",\n",
-    "    \"host_processor_core_count\": \"required\",\n",
-    "    \"host_processor_frequency\": \"\",\n",
-    "    \"host_processor_caches\": \"\",\n",
-    "    \"host_memory_configuration\": \"\",\n",
-    "    \"host_memory_capacity\": \"required\",\n",
-    "    \"host_storage_capacity\": \"required\",\n",
-    "    \"host_storage_type\": \"required\",\n",
-    "    \"host_processor_interconnect\": \"\",\n",
-    "    \"host_networking\": \"\",\n",
-    "    \"host_networking_topology\": \"\",\n",
-    "\n",
-    "    \"accelerators_per_node\": \"required\",\n",
-    "    \"accelerator_model_name\": \"required\",\n",
-    "    \"accelerator_frequency\": \"\",\n",
-    "    \"accelerator_host_interconnect\": \"\",\n",
-    "    \"accelerator_interconnect\": \"\",\n",
-    "    \"accelerator_interconnect_topology\": \"\",\n",
-    "    \"accelerator_memory_capacity\": \"required\",\n",
-    "    \"accelerator_memory_configuration\": \"\",\n",
-    "    \"accelerator_on-chip_memories\": \"\",\n",
-    "    \"cooling\": \"\",\n",
-    "    \"hw_notes\": \"\",\n",
-    "\n",
-    "    \"framework\": \"required\",\n",
-    "    \"operating_system\": \"required\",\n",
-    "    \"other_software_stack\": \"required\",\n",
-    "    \"sw_notes\": \"\"\n",
-    "}\n",
-    "\n",
-    "# system_desc_id_imp.json\n",
     "default_implementation_benchmark_json = {\n",
     "    \"input_data_types\": \"required\",\n",
     "    \"retraining\": \"required\",\n",
@@ -451,11 +492,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download experimental data and add CK repositories as follows:\n",
+    "Download experimental data and add CK repositories as follows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image Classification - Closed (MobileNet, ResNet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `firefly`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
-    "wget https://www.dropbox.com/s/jbpdh6c5d8fgwpl/mlperf.open.image-classification.firefly.zip\n",
-    "$ ck add repo --zip=mlperf.open.image-classification.firefly.zip\n",
+    "$ wget https://www.dropbox.com/s/3md826fk7k1taf3/mlperf.closed.image-classification.firefly.tflite-v1.15.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.firefly.tflite-v1.15.zip\n",
+    "\n",
+    "$ https://www.dropbox.com/s/jusoz329mhixpxm/mlperf.closed.image-classification.firefly.armnn-v19.08.neon.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.firefly.armnn-v19.08.neon.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/08lzbz7jl2w5jhu/mlperf.closed.image-classification.firefly.armnn-v19.08.opencl.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.firefly.armnn-v19.08.opencl.zip\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `hikey960`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ wget https://www.dropbox.com/s/lqnffl6wbaeceul/mlperf.closed.image-classification.hikey960.tflite-v1.15.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.hikey960.tflite-v1.15.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/6m6uv1d33yc82f8/mlperf.closed.image-classification.hikey960.armnn-v19.08.neon.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.hikey960.armnn-v19.08.neon.zip\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO:** experiments with OpenCL are in progress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `rpi4`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**: missing performance experiments with TFLite v1.15; no experiments with ArmNN v19.08 with Neon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `mate10pro`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO:** accuracy experiment with TFLite v1.15 for ResNet aborted (estimated 17 hours); no accuracy experiments with ArmNN."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image Classification - Open (MobileNets-v1,v2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `firefly`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ wget https://www.dropbox.com/s/q8ieqgnr3zn6w4y/mlperf.open.image-classification.firefly.tflite-v1.15.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.firefly.tflite-v1.15.zip\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO:** experiments with ArmNN  w/ OpenCL are in progress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `hikey960`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ wget https://www.dropbox.com/s/2gbbpsd2pjurvc8/mlperf.open.image-classification.hikey960.tflite-v1.15.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.hikey960.tflite-v1.15.zip\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `rpi4`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO:** experiments with TFLite are in progress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"check\"></a>\n",
+    "## Check the experimental data"
    ]
   },
   {
@@ -465,8 +657,22 @@
    "outputs": [],
    "source": [
     "repos = [\n",
-    "#    'mlperf.open.image-classification.firefly'\n",
-    "    'mlperf.closed.image-classification.firefly'\n",
+    "    #\n",
+    "    # Image Classification - Closed (MobileNet, ResNet)\n",
+    "    #\n",
+    "    # firefly\n",
+    "    'mlperf.closed.image-classification.firefly.tflite-v1.15',\n",
+    "    'mlperf.closed.image-classification.firefly.armnn-v19.08.neon',\n",
+    "    'mlperf.closed.image-classification.firefly.armnn-v19.08.opencl',\n",
+    "    # hikey960\n",
+    "    'mlperf.closed.image-classification.hikey960.tflite-v1.15',\n",
+    "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.neon',\n",
+    "    #\n",
+    "    # Image Classification - Open (MobileNets-v1,v2)\n",
+    "    # firefly\n",
+    "    'mlperf.open.image-classification.firefly.tflite-v1.15',\n",
+    "    # hikey960\n",
+    "    'mlperf.open.image-classification.hikey960.tflite-v1.15',\n",
     "]"
    ]
   },
@@ -476,17 +682,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !ck recache repo\n",
     "for repo_uoa in repos:\n",
+    "    print(\"=\" * 100)\n",
+    "    print(repo_uoa)\n",
+    "    print(\"=\" * 100)\n",
     "    !ck list $repo_uoa:experiment:* | sort\n",
-    "    print (\"*\" * 80)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"check\"></a>\n",
-    "## Check the experimental data"
+    "    print(\"-\" * 100)\n",
+    "    print(\"\")"
    ]
   },
   {
@@ -516,8 +719,8 @@
     "        if r['return']>0:\n",
     "            print('Error: %s' % r['error'])\n",
     "            exit(1)\n",
-    "        print (\"*\" * 80)\n",
-    "        \n",
+    "        print(\"*\" * 120)\n",
+    "\n",
     "        tags = r['dict']['tags']\n",
     "        if 'accuracy' in tags:\n",
     "            if 'neon' in tags or 'opencl' in tags:\n",
@@ -591,9 +794,19 @@
     "        implementation_dir = os.path.join(benchmark_dir, implementation)\n",
     "        if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
     "        print('%s' % code_dir)\n",
-    "        print('  |_ %s [DEFAULT]' % implementation)\n",
-    "        # TODO: Add basic description of image-classification-{tflite,armnn-tflite}.\n",
-    "        \n",
+    "        # Create 'README.md'.\n",
+    "        implementation_readme_name = 'README.md'\n",
+    "        implementation_readme_path = os.path.join(implementation_dir, implementation_readme_name)\n",
+    "        implementation_readme = implementation_readmes.get(implementation, '')\n",
+    "        with open(implementation_readme_path, 'w') as implementation_readme_file:\n",
+    "            implementation_readme_file.writelines(implementation_readme)\n",
+    "        if implementation_readme == '':\n",
+    "            print('  |_ %s [EMPTY]' % implementation_readme_name)\n",
+    "            raise\n",
+    "        else:\n",
+    "            print('  |_ %s' % implementation_readme_name)\n",
+    "        # TODO: Copy run.sh\n",
+    "\n",
     "        #\n",
     "        #     \"measurements\"/\n",
     "        #       <system_desc_id>/\n",
@@ -614,8 +827,7 @@
     "        scenario_dir = os.path.join(benchmark_dir, scenario)\n",
     "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
     "        print(scenario_dir)\n",
-    "        # Touch empty files.\n",
-    "        # <system_desc_id>_<implementation_id>.json\n",
+    "        # Create '<system_desc_id>_<implementation_id>.json'.\n",
     "        system_implementation_json_name = system+'_'+implementation+'.json'\n",
     "        system_implementation_json_path = os.path.join(scenario_dir, system_implementation_json_name)\n",
     "        with open(system_implementation_json_path, 'w') as system_implementation_json_file:\n",
@@ -626,24 +838,26 @@
     "                raise\n",
     "            else:\n",
     "                print('  |_ %s [%s]' % (system_implementation_json_name, implementation_benchmark))\n",
-    "        # README.md\n",
-    "        readme_name = 'README.md'\n",
-    "        readme_path = os.path.join(scenario_dir, readme_name)\n",
-    "        with open(readme_path, 'a'):\n",
-    "            os.utime(readme_path, None)\n",
-    "            print('  |_ %s [EMPTY]' % readme_name)\n",
-    "        # user.conf\n",
+    "        # Create empty 'README.md'.\n",
+    "        system_implementation_readme_name = 'README.md'\n",
+    "        system_implementation_readme_path = os.path.join(scenario_dir, system_implementation_readme_name)\n",
+    "        with open(system_implementation_readme_path, 'a'):\n",
+    "            os.utime(system_implementation_readme_path, None)\n",
+    "            print('  |_ %s [EMPTY]' % system_implementation_readme_name)\n",
+    "        \n",
+    "        # Copy 'user.conf' from implementation source.\n",
     "        user_conf_name = 'user.conf'\n",
-    "        user_conf_path = os.path.join(scenario_dir, user_conf_name)\n",
-    "        with open(user_conf_path, 'a'):\n",
-    "            os.utime(user_conf_path, None)\n",
-    "            print('  |_ %s [EMPTY]' % user_conf_name)\n",
-    "        # mlperf.conf\n",
+    "        # FIXME: Do not hardcode - locate via CK.\n",
+    "        user_conf_path = '/home/anton/CK_REPOS/ck-mlperf/program/image-classification-armnn-tflite-loadgen/user.conf'\n",
+    "        copy2(user_conf_path, scenario_dir)\n",
+    "        print('  |_ %s [from %s]' % (user_conf_name, user_conf_path))\n",
+    "        \n",
+    "        # Copy 'mlperf.conf' from MLPerf Inference source.\n",
     "        mlperf_conf_name = 'mlperf.conf'\n",
-    "        mlperf_conf_path = os.path.join(scenario_dir, mlperf_conf_name)\n",
-    "        with open(mlperf_conf_path, 'a'):\n",
-    "            os.utime(mlperf_conf_path, None)\n",
-    "            print('  |_ %s [EMPTY]' % mlperf_conf_name)\n",
+    "        # FIXME: Do not hardcode - locate via CK.\n",
+    "        mlperf_conf_path = '/home/anton/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/mlperf.conf'\n",
+    "        copy2(mlperf_conf_path, scenario_dir)\n",
+    "        print('  |_ %s [from %s]' % (mlperf_conf_name, mlperf_conf_path))\n",
     "        \n",
     "        #\n",
     "        #     \"results\"/\n",
@@ -718,14 +932,14 @@
     "                with open(accuracy_txt_path, 'w') as accuracy_txt_file:\n",
     "                    accuracy_txt_file.writelines(accuracy_txt)\n",
     "                    # Print the first line containing accuracy info.\n",
-    "                    print('  |_ %s (\"%s\")' % (accuracy_txt_name, accuracy_txt[0]))\n",
+    "                    print('  |_ %s [\"%s\"]' % (accuracy_txt_name, accuracy_txt[0]))\n",
     "#             # Trace file (should omit trace from v0.5).\n",
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
     "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
     "\n",
-    "    print (\"*\" * 80)\n",
+    "    print(\"*\" * 120)\n",
     "    # FIXME: Do not hardcode - locate via CK.\n",
     "    submission_checker_py = '$HOME/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/tools/submission/submission-checker.py'\n",
     "    !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
