Locate upstream source. Save compliance checker log.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -459,6 +459,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "implementation_paths = {}\n",
+    "for implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite' ]:\n",
+    "    implementation_loadgen = implementation+'-loadgen'\n",
+    "    r = ck.access({'action':'find', 'repo_uoa':'ck-mlperf', 'module_uoa':'program', 'data_uoa':implementation_loadgen})\n",
+    "    if r['return']>0:\n",
+    "        print('Error: %s' % r['error'])\n",
+    "        exit(1)\n",
+    "    implementation_paths[implementation] = r['path']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Snapshot of https://github.com/dividiti/inference/blob/61220457dec221ed1984c62bd9d382698bd71bc6/v0.5/mlperf.conf\n",
+    "mlperf_conf_6122045 = '''\n",
+    "# The format of this config file is 'key = value'.\n",
+    "# The key has the format 'model.scenario.key'. Value is mostly int64_t.\n",
+    "# Model maybe '*' as wildcard. In that case the value applies to all models.\n",
+    "# All times are in milli seconds\n",
+    "\n",
+    "*.SingleStream.target_latency = 10\n",
+    "*.SingleStream.target_latency_percentile = 90\n",
+    "*.SingleStream.min_duration = 60000\n",
+    "*.SingleStream.min_query_count = 1024\n",
+    "\n",
+    "*.MultiStream.target_qps = 20\n",
+    "*.MultiStream.target_latency_percentile = 99\n",
+    "*.MultiStream.samples_per_query = 4\n",
+    "*.MultiStream.max_async_queries = 1\n",
+    "*.MultiStream.target_latency = 50\n",
+    "*.MultiStream.min_duration = 60000\n",
+    "*.MultiStream.min_query_count = 270336\n",
+    "ssd-resnet34.MultiStream.target_qps = 15\n",
+    "ssd-resnet34.MultiStream.target_latency = 66\n",
+    "gnmt.MultiStream.min_query_count = 90112\n",
+    "gnmt.MultiStream.target_latency = 100\n",
+    "gnmt.MultiStream.target_qps = 10\n",
+    "gnmt.MultiStream.target_latency_percentile = 97\n",
+    "\n",
+    "*.Server.target_qps = 1.0\n",
+    "*.Server.target_latency = 10\n",
+    "*.Server.target_latency_percentile = 99\n",
+    "*.Server.target_duration = 0\n",
+    "*.Server.min_duration = 60000\n",
+    "*.Server.min_query_count = 270336\n",
+    "resnet50.Server.target_latency = 15\n",
+    "ssd-resnet34.Server.target_latency = 100\n",
+    "gnmt.Server.min_query_count = 90112\n",
+    "gnmt.Server.target_latency = 250\n",
+    "gnmt.Server.target_latency_percentile = 97\n",
+    "\n",
+    "*.Offline.target_qps = 1.0\n",
+    "*.Offline.target_latency_percentile = 90\n",
+    "*.Offline.min_duration = 60000\n",
+    "*.Offline.min_query_count = 1\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -698,6 +765,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Locate upstream master.\n",
+    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
+    "if r['return']>0:\n",
+    "    print('Error: %s' % r['error'])\n",
+    "    exit(1)\n",
+    "# Pick any source location and look under 'inference/v0.5/mlperf.conf'.\n",
+    "upstream_path = os.path.join(list(r['install_locations'].values())[0], 'inference')\n",
+    "upstream_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None):\n",
     "    if not path:\n",
     "        path_list = !ck find repo:$repo_uoa\n",
@@ -845,19 +928,28 @@
     "            os.utime(system_implementation_readme_path, None)\n",
     "            print('  |_ %s [EMPTY]' % system_implementation_readme_name)\n",
     "        \n",
-    "        # Copy 'user.conf' from implementation source.\n",
+    "        # Copy 'user.conf' from the implementation source.\n",
     "        user_conf_name = 'user.conf'\n",
-    "        # FIXME: Do not hardcode - locate via CK.\n",
-    "        user_conf_path = '/home/anton/CK_REPOS/ck-mlperf/program/image-classification-armnn-tflite-loadgen/user.conf'\n",
-    "        copy2(user_conf_path, scenario_dir)\n",
-    "        print('  |_ %s [from %s]' % (user_conf_name, user_conf_path))\n",
+    "        implementation_path = implementation_paths.get(implementation, '')\n",
+    "        if implementation_path == '':\n",
+    "            raise \"Invalid implementation path!\"\n",
+    "        else:\n",
+    "            user_conf_path = os.path.join(implementation_path, user_conf_name)\n",
+    "            copy2(user_conf_path, scenario_dir)\n",
+    "            print('  |_ %s [from %s]' % (user_conf_name, user_conf_path))\n",
     "        \n",
     "        # Copy 'mlperf.conf' from MLPerf Inference source.\n",
     "        mlperf_conf_name = 'mlperf.conf'\n",
-    "        # FIXME: Do not hardcode - locate via CK.\n",
-    "        mlperf_conf_path = '/home/anton/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/mlperf.conf'\n",
-    "        copy2(mlperf_conf_path, scenario_dir)\n",
-    "        print('  |_ %s [from %s]' % (mlperf_conf_name, mlperf_conf_path))\n",
+    "        mlperf_conf_path = os.path.join(scenario_dir, mlperf_conf_name)\n",
+    "        if implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite' ]:\n",
+    "            # Write a snapshot from https://github.com/dividiti/inference/blob/61220457dec221ed1984c62bd9d382698bd71bc6/v0.5/mlperf.conf\n",
+    "            with open(mlperf_conf_path, 'w') as mlperf_conf_file:\n",
+    "                mlperf_conf_file.writelines(mlperf_conf_6122045)\n",
+    "            print('  |_ %s [from %s]' % (mlperf_conf_name, 'github.com/mlperf/inference@6122045'))\n",
+    "        else:\n",
+    "            upstream_mlperf_conf_path = os.path.join(upstream_path, 'v0.5', 'mlperf.conf')\n",
+    "            copy2(upstream_mlperf_conf_path, mlperf_conf_path)\n",
+    "            print('  |_ %s [from %s]' % (mlperf_conf_name, upstream_mlperf_conf_path))\n",
     "        \n",
     "        #\n",
     "        #     \"results\"/\n",
@@ -923,9 +1015,8 @@
     "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file, indent=2)\n",
     "                print('  |_ %s' % accuracy_json_name)\n",
     "            if mode == 'accuracy':\n",
-    "                # FIXME: Do not hardcode - locate via CK.\n",
-    "                accuracy_imagenet_py = '$HOME/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/classification_and_detection/tools/accuracy-imagenet.py'\n",
-    "                imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt'\n",
+    "                accuracy_imagenet_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-imagenet.py')\n",
+    "                imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt' # FIXME: Do not hardcode - locate via CK.\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
     "                accuracy_txt_path = os.path.join(last_dir, accuracy_txt_name)\n",
     "                accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
@@ -940,12 +1031,20 @@
     "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
     "\n",
     "    print(\"*\" * 120)\n",
-    "    # FIXME: Do not hardcode - locate via CK.\n",
-    "    submission_checker_py = '$HOME/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/tools/submission/submission-checker.py'\n",
-    "    !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
+    "    submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
+    "    checker_log = !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
+    "    checker_log = \"\\n\".join(checker_log)\n",
+    "    print(checker_log)\n",
+    "    checker_log_name = 'compliance_checker_log.txt'\n",
+    "    checker_log_path = os.path.join(organization_dir, checker_log_name)\n",
+    "    with open(checker_log_path, 'w') as checker_log_file:\n",
+    "        checker_log_file.writelines(checker_log)\n",
+    "        print(organization_dir)\n",
+    "        print('  |_%s' % checker_log_name)\n",
     "    \n",
     "    return dfs\n",
     "\n",
+    "repo_uoa = 'mlperf.open.image-classification.firefly.tflite-v1.15'\n",
     "dfs = get_experimental_results(repo_uoa)"
    ]
   }
