Add rpi4 system.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -381,7 +381,7 @@
     "    \"accelerator_memory_capacity\": \"3 GiB (shared with host)\",\n",
     "    \"accelerator_memory_configuration\": \"-\",\n",
     "    \"accelerator_on-chip_memories\": \"-\",\n",
-    "    \"cooling\": \"phone case\",\n",
+    "    \"cooling\": \"small external fan\",\n",
     "    \"hw_notes\": \"http://www.hisilicon.com/en/Products/ProductList/Kirin\",\n",
     "\n",
     "    \"framework\": \"\",\n",
@@ -588,6 +588,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Raspberry Pi 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpi4 = {\n",
+    "    \"division\": \"\",\n",
+    "    \"submitter\": \"dividiti\",\n",
+    "    \"status\": \"available\",\n",
+    "    \"system_name\": \"Raspberry Pi 4\",\n",
+    "\n",
+    "    \"number_of_nodes\": \"1\",\n",
+    "    \"host_processor_model_name\": \"Arm Cortex-A72 MP4\",\n",
+    "    \"host_processors_per_node\": \"1\",\n",
+    "    \"host_processor_core_count\": \"4\",\n",
+    "    \"host_processor_frequency\": \"1500 MHz\",\n",
+    "    \"host_processor_caches\": \"L1I$ 128=4x32 KiB, L1D$ 128=4x32 KiB, L2$ 1 MiB\",\n",
+    "    \"host_memory_configuration\": \"-\",\n",
+    "    \"host_memory_capacity\": \"4 GiB\",\n",
+    "    \"host_storage_capacity\": \"128 GiB\",\n",
+    "    \"host_storage_type\": \"SanDisk Extreme Pro microSD\",\n",
+    "    \"host_processor_interconnect\": \"-\",\n",
+    "    \"host_networking\": \"-\",\n",
+    "    \"host_networking_topology\": \"-\",\n",
+    "\n",
+    "    \"accelerators_per_node\": \"0\",\n",
+    "    \"accelerator_model_name\": \"-\",\n",
+    "    \"accelerator_frequency\": \"-\",\n",
+    "    \"accelerator_host_interconnect\": \"-\",\n",
+    "    \"accelerator_interconnect\": \"-\",\n",
+    "    \"accelerator_interconnect_topology\": \"-\",\n",
+    "    \"accelerator_memory_capacity\": \"-\",\n",
+    "    \"accelerator_memory_configuration\": \"-\",\n",
+    "    \"accelerator_on-chip_memories\": \"-\",\n",
+    "    \"cooling\": \"http://www.raspberrypiwiki.com/index.php/Armor_Case_B\",\n",
+    "    \"hw_notes\": \"https://www.raspberrypi.org/products/raspberry-pi-4-model-b/specifications/\",\n",
+    "\n",
+    "    \"framework\": \"\",\n",
+    "    \"operating_system\": \"Debian 10\",\n",
+    "    \"other_software_stack\": \"GCC 8.3.0; Python 3.7.3\",\n",
+    "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TFLite v1.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "closed_rpi4_tflite = deepcopy(rpi4)\n",
+    "closed_rpi4_tflite.update({\n",
+    "    \"division\"  : \"closed\",\n",
+    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
+    "})\n",
+    "closed_rpi4_tflite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_rpi4_tflite = deepcopy(rpi4)\n",
+    "open_rpi4_tflite.update({\n",
+    "    \"division\"  : \"open\",\n",
+    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
+    "})\n",
+    "open_rpi4_tflite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ArmNN v19.08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "closed_rpi4_armnn = deepcopy(rpi4)\n",
+    "closed_rpi4_armnn.update({\n",
+    "    \"division\"  : \"closed\",\n",
+    "    \"framework\" : \"ArmNN v19.08\"\n",
+    "})\n",
+    "closed_rpi4_armnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_rpi4_armnn = deepcopy(rpi4)\n",
+    "open_rpi4_armnn.update({\n",
+    "    \"division\"  : \"open\",\n",
+    "    \"framework\" : \"ArmNN v19.08\"\n",
+    "})\n",
+    "open_rpi4_armnn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### All"
    ]
   },
@@ -605,13 +727,17 @@
     "    'closed-hikey960-armnn-v19.08'  : closed_hikey960_armnn,\n",
     "    'closed-mate10pro-tflite-v1.13' : closed_mate10pro_tflite,\n",
     "    'closed-mate10pro-armnn-v19.08' : closed_mate10pro_armnn,\n",
+    "    'closed-rpi4-tflite-v1.15'      : closed_rpi4_tflite,\n",
+    "    'closed-rpi4-armnn-v19.08'      : closed_rpi4_armnn,    \n",
     "    # Open.\n",
     "    'open-firefly-tflite-v1.15'     : open_firefly_tflite,\n",
     "    'open-firefly-armnn-v19.08'     : open_firefly_armnn,\n",
     "    'open-hikey960-tflite-v1.15'    : open_hikey960_tflite,\n",
     "    'open-hikey960-armnn-v19.08'    : open_hikey960_armnn,\n",
     "    'open-mate10pro-tflite-v1.13'   : open_mate10pro_tflite,\n",
-    "    'open-mate10pro-armnn-v19.08'   : open_mate10pro_armnn\n",
+    "    'open-mate10pro-armnn-v19.08'   : open_mate10pro_armnn,\n",
+    "    'open-rpi4-tflite-v1.15'        : open_rpi4_tflite,\n",
+    "    'open-rpi4-armnn-v19.08'        : open_rpi4_armnn,\n",
     "}"
    ]
   },
@@ -1372,7 +1498,7 @@
     "    \n",
     "    return dfs\n",
     "\n",
-    "repo_uoa = 'mlperf.closed.image-classification.hikey960.tflite-v1.15'\n",
+    "repo_uoa = 'mlperf.open.image-classification.firefly.tflite-v1.15'\n",
     "dfs = get_experimental_results(repo_uoa)"
    ]
   }
