Rename MLPerf Inference v0.5 jnotebook (-> dividiti).

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -283,7 +283,7 @@
    "source": [
     "closed_firefly_tflite = deepcopy(firefly)\n",
     "closed_firefly_tflite.update({\n",
-    "    \"division\" : \"closed\",\n",
+    "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
     "})\n",
     "closed_firefly_tflite"
@@ -297,7 +297,7 @@
    "source": [
     "open_firefly_tflite = deepcopy(firefly)\n",
     "open_firefly_tflite.update({\n",
-    "    \"division\" : \"open\",\n",
+    "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
     "})\n",
     "open_firefly_tflite"
@@ -318,7 +318,7 @@
    "source": [
     "closed_firefly_armnn = deepcopy(firefly)\n",
     "closed_firefly_tflite.update({\n",
-    "    \"division\" : \"closed\",\n",
+    "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
     "closed_firefly_armnn"
@@ -332,7 +332,7 @@
    "source": [
     "open_firefly_armnn = deepcopy(firefly)\n",
     "open_firefly_tflite.update({\n",
-    "    \"division\" : \"open\",\n",
+    "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
     "open_firefly_armnn"
@@ -406,7 +406,7 @@
    "source": [
     "closed_hikey960_tflite = deepcopy(hikey960)\n",
     "closed_hikey960_tflite.update({\n",
-    "    \"division\" : \"closed\",\n",
+    "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
     "})\n",
     "closed_hikey960_tflite"
@@ -420,7 +420,7 @@
    "source": [
     "open_hikey960_tflite = deepcopy(hikey960)\n",
     "open_hikey960_tflite.update({\n",
-    "    \"division\" : \"open\",\n",
+    "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
     "})\n",
     "open_hikey960_tflite"
@@ -441,7 +441,7 @@
    "source": [
     "closed_hikey960_armnn = deepcopy(hikey960)\n",
     "closed_hikey960_tflite.update({\n",
-    "    \"division\" : \"closed\",\n",
+    "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
     "closed_hikey960_armnn"
@@ -455,7 +455,7 @@
    "source": [
     "open_hikey960_armnn = deepcopy(hikey960)\n",
     "open_hikey960_tflite.update({\n",
-    "    \"division\" : \"open\",\n",
+    "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
     "open_hikey960_armnn"
@@ -529,7 +529,7 @@
    "source": [
     "closed_mate10pro_tflite = deepcopy(mate10pro)\n",
     "closed_mate10pro_tflite.update({\n",
-    "    \"division\" : \"closed\",\n",
+    "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"TFLite v1.13.1\"\n",
     "})\n",
     "closed_mate10pro_tflite"
@@ -543,7 +543,7 @@
    "source": [
     "open_mate10pro_tflite = deepcopy(mate10pro)\n",
     "open_mate10pro_tflite.update({\n",
-    "    \"division\" : \"open\",\n",
+    "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"TFLite v1.13.1\"\n",
     "})\n",
     "open_mate10pro_tflite"
@@ -564,7 +564,7 @@
    "source": [
     "closed_mate10pro_armnn = deepcopy(mate10pro)\n",
     "closed_mate10pro_armnn.update({\n",
-    "    \"division\" : \"closed\",\n",
+    "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
     "closed_mate10pro_armnn"
@@ -578,7 +578,7 @@
    "source": [
     "open_mate10pro_armnn = deepcopy(mate10pro)\n",
     "open_mate10pro_armnn.update({\n",
-    "    \"division\" : \"open\",\n",
+    "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
     "open_mate10pro_armnn"
@@ -1169,7 +1169,7 @@
    "source": [
     "repos = [\n",
     "    #\n",
-    "    # Image Classification - Closed (MobileNet, ResNet)\n",
+    "    # Image Classification - Closed (MobileNet, ResNet).\n",
     "    #\n",
     "    # firefly\n",
     "    'mlperf.closed.image-classification.firefly.tflite-v1.15',\n",
@@ -1182,7 +1182,9 @@
     "    # mate10pro\n",
     "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon', # BAD LOADGEN\n",
     "    'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet', # BAD LOADGEN\n",
-    "    # Image Classification - Open (MobileNets-v1,v2)\n",
+    "    #\n",
+    "    # Image Classification - Open (MobileNets-v1,v2).\n",
+    "    #\n",
     "    # firefly\n",
     "    'mlperf.open.image-classification.firefly.tflite-v1.15',\n",
     "    # hikey960\n",
@@ -1498,7 +1500,7 @@
     "    \n",
     "    return dfs\n",
     "\n",
-    "repo_uoa = 'mlperf.open.image-classification.firefly.tflite-v1.15'\n",
+    "repo_uoa = 'mlperf.closed.image-classification.firefly.tflite-v1.15'\n",
     "dfs = get_experimental_results(repo_uoa)"
    ]
   }
